<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/layout_login_top"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:hint="@string/login_mail"
                android:id="@+id/txt_login_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        <EditText
                android:hint="@string/login_password"
                android:id="@+id/txt_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/layout_login_bottom">
        
        <com.kakao.usermgmt.LoginButton
                android:id="@+id/btn_kakao_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
    </RelativeLayout>
    
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/layout_login_bottom"
            android:visibility="gone">
        
        <RelativeLayout
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Button
                    android:id="@+id/btn_join"
                    android:text="@string/login_join"
                    android:background="@color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/btn_login_find_password"
                    android:text="@string/login_find_password"
                    android:layout_width="wrap_content"
                    android:background="@color/transparent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/btn_join"/>
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
            android:id="@+id/layout_login_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
        <Button
                android:text="@string/login_complete"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>